# ecal-cop

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-macos.yml  build-ubuntu-22.yml  build-ubuntu.yml  build-windows.yml
ecal/core/: CMakeLists.txt
ecal/core/cfg/: ecal.ini
ecal/core/include/ecal/: ecal_callback.h  ecal_clang.h  ecal_log.h  ecal_process.h  ecal_publisher.h  ecal_subscriber.h  ecal_util.h  ecalc.h  ecalc_types.h
ecal/core/include/ecal/cimpl/: ecal_process_cimpl.h  ecal_publisher_cimpl.h  ecal_subscriber_cimpl.h
ecal/core/include/ecal/msg/: publisher.h  subscriber.h
ecal/core/include/ecal/msg/string/: publisher.h
ecal/core/src/: ecal.cpp  ecal_c.cpp  ecal_clang.cpp  ecal_def.h  ecal_eventhandle.h  ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h  ecal_process.cpp  ecal_sample_to_topicinfo.h  ecal_util.cpp  ecalc.cpp
ecal/core/src/config/: ecal_config.cpp  ecal_config_reader.cpp
ecal/core/src/io/udp/: ecal_udp_configurations.h  ecal_udp_sample_receiver.cpp  ecal_udp_sample_receiver.h  ecal_udp_sample_sender.cpp  ecal_udp_sample_sender.h
ecal/core/src/io/udp/fragmentation/: snd_fragments.cpp  snd_fragments.h
ecal/core/src/io/udp/sendreceive/: udp_receiver_asio.h
ecal/core/src/logging/: ecal_log_impl.h
ecal/core/src/pubsub/: ecal_pubgate.cpp  ecal_pubgate.h  ecal_publisher.cpp  ecal_subgate.cpp  ecal_subgate.h  ecal_subscriber.cpp
ecal/core/src/readwrite/: ecal_reader.cpp  ecal_reader.h  ecal_reader_layer.h  ecal_writer.cpp  ecal_writer.h  ecal_writer_base.h  ecal_writer_data.h
ecal/core/src/readwrite/udp/: ecal_reader_udp_mc.cpp  ecal_reader_udp_mc.h  ecal_writer_udp_mc.cpp  ecal_writer_udp_mc.h
ecal/core/src/registration/: ecal_registration_provider.cpp  ecal_registration_provider.h  ecal_registration_receiver.cpp  ecal_registration_receiver.h
ecal/core/src/serialization/: ecal_sample.cpp  ecal_sample.h  ecal_sample_cereal.cpp  ecal_sample_cereal_payload.cpp  ecal_sample_cereal_registration.cpp  ecal_sample_protobuf.cpp  ecal_sample_protobuf_payload.cpp  ecal_sample_struct.h  ecal_sample_struct_common.h  ecal_sample_struct_payload.h  ecal_sample_struct_registration.h
ecal/core/src/time/: ecal_time.cpp  ecal_timegate.cpp
ecal/core_pb/: CMakeLists.txt
ecal_time/ecaltime_pb/: CMakeLists.txt
ecal_time/linuxptp/: CMakeLists.txt
ecal_utils/: CMakeLists.txt
samples/: CMakeLists.txt
samples/c/pubsub/string/minimal_rec/src/: minimal_rec.c
samples/c/pubsub/string/minimal_rec_cb/src/: minimal_rec_cb.c
samples/c/pubsub/string/minimal_snd/src/: minimal_snd.c
samples/cpp/benchmarks/multiple_rec/: CMakeLists.txt
samples/cpp/benchmarks/multiple_rec/src/: main.cpp
samples/cpp/benchmarks/multiple_snd/: CMakeLists.txt
samples/cpp/benchmarks/multiple_snd/src/: main.cpp
samples/cpp/benchmarks/perftool/: CMakeLists.txt
samples/cpp/monitoring/monitoring_rec/src/: monitoring_rec.cpp
src/core/: CMakeLists.txt
src/core/cfg/: ecal.ini
src/core/include/ecal/: ecal.h  ecal_c.h  ecal_config.h  ecal_init.h  ecal_log.h  ecal_monitoring.h  ecal_publisher.h  ecal_subscriber.h  ecal_types.h  ecalc.h  ecalc_types.h
src/core/include/ecal/cimpl/: ecal_callback_cimpl.h  ecal_process_cimpl.h  ecal_publisher_cimpl.h  ecal_subscriber_cimpl.h  ecal_util_cimpl.h
src/core/include/ecal/msg/protobuf/: dynamic_subscriber.h  publisher.h  subscriber.h
src/core/src/: ecal.cpp  ecal_c.cpp  ecal_def.h  ecal_def_ini.h  ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h  ecal_process.cpp  ecal_sample_to_topicinfo.h  ecalc.cpp
src/core/src/config/: ecal_config.cpp  ecal_config_reader.cpp
src/core/src/io/udp/: ecal_udp_configurations.cpp  ecal_udp_sample_sender.cpp  ecal_udp_sample_sender.h
src/core/src/io/udp/fragmentation/: snd_fragments.cpp  snd_fragments.h
src/core/src/logging/: ecal_log.cpp  ecal_log_impl.cpp  ecal_log_impl.h
src/core/src/monitoring/: ecal_monitoring_def.cpp  ecal_monitoring_impl.cpp  ecal_monitoring_impl.h
src/core/src/pubsub/: ecal_pubgate.cpp  ecal_pubgate.h  ecal_publisher.cpp  ecal_subgate.cpp  ecal_subscriber.cpp
src/core/src/readwrite/: ecal_reader.cpp  ecal_reader.h  ecal_reader_layer.h  ecal_writer.cpp  ecal_writer.h  ecal_writer_base.h  ecal_writer_data.h
src/core/src/readwrite/shm/: ecal_reader_shm.cpp  ecal_writer_shm.cpp
src/core/src/readwrite/tcp/: ecal_reader_tcp.h  ecal_writer_tcp.cpp
src/core/src/readwrite/udp/: ecal_reader_udp_mc.cpp  ecal_writer_udp_mc.cpp  ecal_writer_udp_mc.h
src/core/src/registration/: ecal_registration_provider.cpp  ecal_registration_provider.h  ecal_registration_receiver.cpp  ecal_registration_receiver.h
src/core/src/serialization/: ecal_nanopb_common.cpp  ecal_nanopb_common.h  ecal_nanopb_monitoring.cpp  ecal_nanopb_sample_payload.cpp  ecal_nanopb_sample_registration.cpp  ecal_nanopb_service.cpp  ecal_sample.h  ecal_sample_cereal_payload.cpp  ecal_sample_cereal_registration.cpp  ecal_sample_nanopb_common.cpp  ecal_sample_nanopb_common.h  ecal_sample_nanopb_payload.cpp  ecal_sample_nanopb_registration.cpp  ecal_sample_protobuf_payload.cpp  ecal_sample_protobuf_registration.cpp  ecal_sample_struct_common.h  ecal_sample_struct_payload.h  ecal_sample_struct_registration.h  ecal_serialize_common.cpp  ecal_serialize_common.h  ecal_serialize_logging.cpp  ecal_serialize_monitoring.cpp  ecal_serialize_monitoring.h  ecal_serialize_sample_payload.cpp  ecal_serialize_sample_payload.h  ecal_serialize_sample_registration.cpp  ecal_serialize_sample_registration.h  ecal_serialize_service.cpp  ecal_serialize_service.h  ecal_struct_logging.h  ecal_struct_monitoring.h  ecal_struct_sample_payload.h  ecal_struct_sample_registration.h  ecal_struct_service.h
src/core/src/serialization/nanopb/: ecal.pb.c  ecal.pb.h  host.pb.h  layer.pb.c  layer.pb.h  monitoring.pb.c  monitoring.pb.h  process.pb.h  topic.pb.h
src/core/src/service/: ecal_clientgate.cpp  ecal_service_client_impl.cpp  ecal_service_server.cpp  ecal_service_server_impl.cpp  ecal_servicegate.h
tests/: CMakeLists.txt
(+38 files in other folders)
